# griffon

./: .gitignore  CHANGELOG.md  Containerfile  Containerfile-dev  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: build.yml  container.yml  lint.yml  main.yml  pypi_release.yml  test.yml
adrs/: 0001-cli-design.md
docs/: developer_guide.md  operations.md  tutorial.md  user_guide.md
files/: .zshrc
griffon/: __init__.py  cli.py  exceptions.py  helpers.py  output.py
griffon/autocomplete/: __init__.py  product_streams.py  product_versions.py
griffon/commands/: __init__.py  configure.py  custom_commands.py  docs.py  entities.py  manage.py  plugin_commands.py  process.py  queries.py  reports.py
griffon/commands/entities/: __init__.py  community_component_registry.py  component_registry.py  corgi.py  helpers.py  osidb.py
griffon/commands/entities/osidb/: __init__.py  affects.py  manage.py  trackers.py
griffon/commands/entities/osidb/affects/: __init__.py  cvss.py
griffon/commands/entities/osidb/flaws/: __init__.py  acknowledgments.py  comments.py  cvss.py  package_versions.py  references.py
griffon/commands/plugins/: README.md  __init__.py  bugzilla.py  cve_mitre.py  cvelib.py  example.py  exploits.py  fcc.py  mangen.py  mfsa.py  osv.py  semgrep.py  z_go_vuln.py  z_mangen.py  z_osv.py
griffon/service_layer/: __init__.py  core_queries.py
griffon/services/: __init__.py  core_process.py  core_queries.py  core_reports.py  exp.py
griffon/static/: default_griffonrc
requirements/: base.in  base.txt  dev.in  dev.txt  lint.in  lint.txt  test.in  test.txt
scripts/: helpers.sh  release.sh  smoke-tests.sh
tests/: test_cli.py  test_entities.py  test_manage.py  test_plugins.py  test_process.py  test_queries.py  test_reports.py  test_unit.py
tests/features/: IR.feature  product-components.feature  product-manifest.feature  product-or-component-flaws.feature  product-summary.feature  products-contain-component.feature
tests/features/steps/: ir_steps.py
